--- a/app/src/main/res/layout-night/activity_main.xml
+++ b/app/src/main/res/layout-night/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#A4DDF8"
+    android:background="#0A2840"
     tools:context=".MainActivity">
 
     <TextView
@@ -14,6 +14,7 @@
         android:layout_marginStart="13dp"
         android:layout_marginTop="8dp"
         android:text="@string/fnt"
+        android:textColor="#FF9800"
         app:layout_constraintStart_toEndOf="@+id/satImg"
         app:layout_constraintTop_toBottomOf="@+id/sunDt" />
 
@@ -24,6 +25,7 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="4dp"
         android:text="@string/fdt"
+        android:textColor="#FF9800"
         app:layout_constraintStart_toEndOf="@+id/satImg"
         app:layout_constraintTop_toBottomOf="@+id/sunImg" />
 
@@ -33,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:text="@string/choose_location"
+        android:textColor="#FFC107"
         android:textSize="30sp"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,21 +59,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:text="@string/radiobutton1" />
+            android:text="@string/radiobutton1"
+            android:textColor="#FFC107" />
 
         <RadioButton
             android:id="@+id/Vilnius"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:text="@string/radiobutton2" />
+            android:text="@string/radiobutton2"
+            android:textColor="#FFC107" />
 
         <RadioButton
             android:id="@+id/Tenerife"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:text="@string/radiobutton3" />
+            android:text="@string/radiobutton3"
+            android:textColor="#FFC107" />
     </RadioGroup>
 
     <TextView
@@ -82,6 +88,7 @@
         android:layout_marginEnd="328dp"
         android:layout_marginBottom="220dp"
         android:text="@string/city"
+        android:textColor="#FF5722"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/imageView2"
@@ -95,8 +102,10 @@
         android:layout_height="120dp"
         android:layout_marginStart="17dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="11dp"
 
         android:src="@drawable/rainy"
+        app:layout_constraintEnd_toStartOf="@+id/textView6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:srcCompat="@tools:sample/avatars" />
@@ -107,10 +116,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="@string/temperature"
-        android:textAlignment="textStart"
+        android:textAlignment="viewStart"
+        android:textColor="#FF9800"
         app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.126"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
@@ -118,12 +128,15 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="197dp"
+        android:layout_marginBottom="222dp"
         android:text="@string/humidity"
-        android:textAlignment="textStart"
+        android:textAlignment="viewStart"
+        android:textColor="#FF9800"
+        app:layout_constraintBottom_toTopOf="@+id/textView7"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
@@ -131,11 +144,11 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:text="@string/pressure"
-        android:textAlignment="textStart"
+        android:textColor="#FF9800"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.145"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
@@ -145,9 +158,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:text="@string/precipitation"
-        android:textAlignment="textStart"
+        android:textColor="#FF9800"
         app:layout_constraintEnd_toStartOf="@+id/precip"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.148"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
@@ -157,9 +170,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/condition"
-        android:textAlignment="textStart"
+        android:textColor="#FF9800"
         app:layout_constraintEnd_toStartOf="@+id/wCond"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
@@ -171,6 +184,7 @@
         android:layout_marginBottom="430dp"
         android:text="@string/weatherForecast"
         android:textAlignment="center"
+        android:textColor="#FFC107"
         android:textSize="26sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -188,6 +202,7 @@
         android:layout_marginTop="33dp"
         android:text="@string/cityTemp"
         android:textAlignment="viewEnd"
+        android:textColor="#FF9800"
         app:layout_constraintBottom_toTopOf="@+id/humid"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView5"
@@ -202,22 +217,25 @@
         android:layout_marginBottom="12dp"
         android:text="@string/cityHumid"
         android:textAlignment="viewEnd"
+        android:textColor="#FF9800"
         app:layout_constraintBottom_toTopOf="@+id/pressure"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/temp" />
 
     <TextView
         android:id="@+id/pressure"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="185dp"
+        android:layout_marginBottom="9dp"
         android:text="@string/cityPressure"
         android:textAlignment="viewEnd"
+        android:textColor="#FF9800"
         app:layout_constraintBottom_toTopOf="@+id/precip"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/humid" />
 
@@ -229,6 +247,7 @@
         android:layout_marginTop="4dp"
         android:text="@string/cityPrecep"
         android:textAlignment="viewEnd"
+        android:textColor="#FF9800"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
@@ -243,6 +262,7 @@
         android:layout_marginBottom="32dp"
         android:text="@string/cityCond"
         android:textAlignment="viewEnd"
+        android:textColor="#FF9800"
         app:layout_constraintBottom_toTopOf="@+id/forecast"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -254,38 +274,33 @@
         android:id="@+id/friday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="48dp"
         android:layout_marginTop="48dp"
-        android:layout_marginEnd="42dp"
         android:text="@string/friday"
-        app:layout_constraintEnd_toEndOf="@+id/frImg"
-        app:layout_constraintStart_toStartOf="@+id/frImg"
+        android:textColor="#FF9800"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/forecast" />
 
     <TextView
         android:id="@+id/satturday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="31dp"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="48dp"
-        android:layout_marginEnd="33dp"
         android:text="@string/sat"
-        app:layout_constraintEnd_toEndOf="@+id/satImg"
+        android:textColor="#FF9800"
         app:layout_constraintStart_toEndOf="@+id/friday"
-        app:layout_constraintStart_toStartOf="@+id/satImg"
         app:layout_constraintTop_toBottomOf="@+id/forecast" />
 
     <TextView
         android:id="@+id/sunday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
+        android:layout_marginStart="80dp"
         android:layout_marginTop="48dp"
-        android:layout_marginEnd="39dp"
         android:text="@string/sunday"
-        app:layout_constraintEnd_toEndOf="@+id/sunImg"
+        android:textColor="#FF9800"
         app:layout_constraintStart_toEndOf="@+id/satturday"
-        app:layout_constraintStart_toStartOf="@+id/sunImg"
         app:layout_constraintTop_toBottomOf="@+id/forecast" />
 
     <ImageView
@@ -328,6 +343,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:text="@string/fdt"
+        android:textColor="#FF9800"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/frImg" />
 
@@ -338,6 +354,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/fnt"
+        android:textColor="#FF9800"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fridayDt" />
 
@@ -348,6 +365,7 @@
         android:layout_marginStart="22dp"
         android:layout_marginTop="3dp"
         android:text="@string/fdt"
+        android:textColor="#FF9800"
         app:layout_constraintStart_toEndOf="@+id/frImg"
         app:layout_constraintTop_toBottomOf="@+id/satImg" />
 
@@ -358,6 +376,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:text="@string/fnt"
+        android:textColor="#FF9800"
         app:layout_constraintStart_toEndOf="@+id/frImg"
         app:layout_constraintTop_toBottomOf="@+id/satDt" />
 
