--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,20 +51,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.416"
+        app:layout_constraintVertical_bias="0.0"
         tools:srcCompat="@tools:sample/avatars" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/temperature"
-        android:textAlignment="textStart"
-        app:layout_constraintBottom_toTopOf="@+id/textView6"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
     <TextView
         android:id="@+id/textView6"
@@ -77,7 +65,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <TextView
         android:id="@+id/textView7"
@@ -89,6 +78,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
@@ -98,15 +88,18 @@
         android:layout_marginTop="8dp"
         android:text="@string/precipitation"
         android:textAlignment="textStart"
+        app:layout_constraintBottom_toTopOf="@+id/guideline13"
         app:layout_constraintEnd_toStartOf="@+id/precip"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/forecast"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="430dp"
         android:text="@string/weatherForecast"
@@ -117,16 +110,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline13" />
+        app:layout_constraintTop_toTopOf="@+id/guideline13"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/temp"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
         android:text="@string/cityTemp"
-        android:textAlignment="viewEnd"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="36sp"
+        android:textStyle="bold|italic"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
     <TextView
@@ -137,7 +135,7 @@
         android:text="@string/cityHumid"
         android:textAlignment="viewEnd"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/temp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <TextView
         android:id="@+id/pressure"
@@ -212,7 +210,7 @@
         android:id="@+id/satImg"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginStart="28dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:src="@drawable/rainy"
         app:layout_constraintStart_toEndOf="@+id/frImg"
@@ -223,7 +221,7 @@
         android:id="@+id/sunImg"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginStart="12dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:src="@drawable/party_cloudy"
         app:layout_constraintStart_toEndOf="@+id/satImg"
@@ -255,7 +253,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="22dp"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="4dp"
         android:text="@string/fdt"
         app:layout_constraintStart_toEndOf="@+id/frImg"
         app:layout_constraintTop_toBottomOf="@+id/satImg" />
@@ -309,5 +307,75 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.4" />
+
+    <TextView
+        android:id="@+id/firstdt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
+        android:text="24°C"
+        app:layout_constraintStart_toEndOf="@+id/fridayDt"
+        app:layout_constraintTop_toBottomOf="@+id/frImg" />
+
+    <TextView
+        android:id="@+id/firstnt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="13°C"
+        app:layout_constraintStart_toEndOf="@+id/fridayNt"
+        app:layout_constraintTop_toBottomOf="@+id/firstdt" />
+
+    <TextView
+        android:id="@+id/secdt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
+        android:text="25°C"
+        app:layout_constraintStart_toEndOf="@+id/satDt"
+        app:layout_constraintTop_toBottomOf="@+id/satImg" />
+
+    <TextView
+        android:id="@+id/secnt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="8dp"
+        android:text="15°C"
+        app:layout_constraintStart_toEndOf="@+id/satNt"
+        app:layout_constraintTop_toBottomOf="@+id/secdt" />
+
+    <TextView
+        android:id="@+id/thirddt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
+        android:text="24°C"
+        app:layout_constraintStart_toEndOf="@+id/sunDt"
+        app:layout_constraintTop_toBottomOf="@+id/sunImg" />
+
+    <TextView
+        android:id="@+id/thirdnt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="8dp"
+        android:text="16°C"
+        app:layout_constraintStart_toEndOf="@+id/sunNt"
+        app:layout_constraintTop_toBottomOf="@+id/thirddt" />
+
+    <Button
+        android:id="@+id/openInternet"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#4CAF50"
+        android:text="@string/more_on_gismeteo"
+        app:layout_constraintBottom_toTopOf="@+id/settings"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/sunNt" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
