связь между активити

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainBackgroundLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#A4DDF8"
@@ -123,7 +124,7 @@
         android:textSize="36sp"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline14"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
@@ -314,7 +315,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
-        android:text="24°C"
+        android:text="+24°C"
         app:layout_constraintStart_toEndOf="@+id/fridayDt"
         app:layout_constraintTop_toBottomOf="@+id/frImg" />
 
@@ -323,7 +324,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="13°C"
+        android:text="+13°C"
         app:layout_constraintStart_toEndOf="@+id/fridayNt"
         app:layout_constraintTop_toBottomOf="@+id/firstdt" />
 
@@ -333,7 +334,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
-        android:text="25°C"
+        android:text="+25°C"
         app:layout_constraintStart_toEndOf="@+id/satDt"
         app:layout_constraintTop_toBottomOf="@+id/satImg" />
 
@@ -343,7 +344,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
         android:layout_marginTop="8dp"
-        android:text="15°C"
+        android:text="+15°C"
         app:layout_constraintStart_toEndOf="@+id/satNt"
         app:layout_constraintTop_toBottomOf="@+id/secdt" />
 
@@ -353,7 +354,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
-        android:text="24°C"
+        android:text="+24°C"
         app:layout_constraintStart_toEndOf="@+id/sunDt"
         app:layout_constraintTop_toBottomOf="@+id/sunImg" />
 
@@ -363,7 +364,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
         android:layout_marginTop="8dp"
-        android:text="16°C"
+        android:text="+16°C"
         app:layout_constraintStart_toEndOf="@+id/sunNt"
         app:layout_constraintTop_toBottomOf="@+id/thirddt" />
 
@@ -377,5 +378,117 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/sunNt" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.64" />
+
+    <TextView
+        android:id="@+id/wind"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/wind"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="@+id/guideline14"
+        app:layout_constraintTop_toTopOf="@+id/imageView2" />
+
+    <TextView
+        android:id="@+id/sunrise"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/sunrise"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="@+id/guideline14"
+        app:layout_constraintTop_toBottomOf="@+id/wind" />
+
+    <TextView
+        android:id="@+id/sunset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/sunset"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="@+id/guideline14"
+        app:layout_constraintTop_toBottomOf="@+id/sunrise" />
+
+    <TextView
+        android:id="@+id/precipProb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/precepitaion"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="@+id/guideline14"
+        app:layout_constraintTop_toBottomOf="@+id/sunset" />
+
+    <TextView
+        android:id="@+id/uv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/uv_level"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="@+id/guideline14"
+        app:layout_constraintTop_toBottomOf="@+id/precipProb" />
+
+    <TextView
+        android:id="@+id/windP"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="@string/_4_m_s_sw"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/wind"
+        app:layout_constraintTop_toTopOf="@+id/imageView2" />
+
+    <TextView
+        android:id="@+id/sunriseTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/_5_35"
+        android:visibility="invisible"
+        app:layout_constraintStart_toEndOf="@+id/sunrise"
+        app:layout_constraintTop_toBottomOf="@+id/windP" />
+
+    <TextView
+        android:id="@+id/sunsetTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/_20_24"
+        android:visibility="invisible"
+        app:layout_constraintStart_toEndOf="@+id/sunset"
+        app:layout_constraintTop_toBottomOf="@+id/sunriseTime" />
+
+    <TextView
+        android:id="@+id/pP"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/_22"
+        android:visibility="invisible"
+        app:layout_constraintStart_toEndOf="@+id/precipProb"
+        app:layout_constraintTop_toBottomOf="@+id/sunsetTime" />
+
+    <TextView
+        android:id="@+id/uvL"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/_1"
+        android:visibility="invisible"
+        app:layout_constraintStart_toEndOf="@+id/uv"
+        app:layout_constraintTop_toBottomOf="@+id/pP" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
