--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -329,7 +329,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="24°C"
+        android:text="+24°C"
         app:layout_constraintStart_toEndOf="@+id/fridayDt"
         app:layout_constraintTop_toTopOf="@+id/frImg" />
 
@@ -339,7 +339,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="13°C"
+        android:text="+13°C"
         app:layout_constraintStart_toEndOf="@+id/fridayNt"
         app:layout_constraintTop_toBottomOf="@+id/firstdt" />
 
@@ -348,7 +348,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="25°C"
+        android:text="+25°C"
         app:layout_constraintStart_toEndOf="@+id/satDt"
         app:layout_constraintTop_toTopOf="@+id/satImg" />
 
@@ -358,7 +358,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="15°C"
+        android:text="+15°C"
         app:layout_constraintStart_toEndOf="@+id/satNt"
         app:layout_constraintTop_toBottomOf="@+id/secdt" />
 
@@ -367,7 +367,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="24°C"
+        android:text="+24°C"
         app:layout_constraintStart_toEndOf="@+id/sunDt"
         app:layout_constraintTop_toTopOf="@+id/sunImg" />
 
@@ -377,7 +377,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="16°C"
+        android:text="+16°C"
         app:layout_constraintStart_toEndOf="@+id/sunNt"
         app:layout_constraintTop_toBottomOf="@+id/thirddt" />
 
@@ -391,5 +391,110 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline6"
         app:layout_constraintTop_toBottomOf="@+id/settings" />
+
+    <TextView
+        android:id="@+id/wind"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/wind"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="@+id/guideline8"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/sunrise"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/sunrise"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="@+id/guideline8"
+        app:layout_constraintTop_toBottomOf="@+id/wind" />
+
+    <TextView
+        android:id="@+id/sunset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/sunset"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="@+id/guideline8"
+        app:layout_constraintTop_toBottomOf="@+id/sunrise" />
+
+    <TextView
+        android:id="@+id/precipProb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/precepitaion"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="@+id/guideline8"
+        app:layout_constraintTop_toBottomOf="@+id/sunset" />
+
+    <TextView
+        android:id="@+id/uv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/uv_level"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="@+id/guideline8"
+        app:layout_constraintTop_toBottomOf="@+id/pressure" />
+
+    <TextView
+        android:id="@+id/windP"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="@string/_4_m_s_sw"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/wind"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/sunriseTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/_5_35"
+        android:visibility="invisible"
+        app:layout_constraintStart_toEndOf="@+id/sunrise"
+        app:layout_constraintTop_toBottomOf="@+id/windP" />
+
+    <TextView
+        android:id="@+id/sunsetTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/_20_24"
+        android:visibility="invisible"
+        app:layout_constraintStart_toEndOf="@+id/sunset"
+        app:layout_constraintTop_toBottomOf="@+id/sunriseTime" />
+
+    <TextView
+        android:id="@+id/pP"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/_22"
+        android:visibility="invisible"
+        app:layout_constraintStart_toEndOf="@+id/precipProb"
+        app:layout_constraintTop_toBottomOf="@+id/sunsetTime" />
+
+    <TextView
+        android:id="@+id/uvL"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/_1"
+        android:visibility="invisible"
+        app:layout_constraintStart_toEndOf="@+id/uv"
+        app:layout_constraintTop_toBottomOf="@+id/pressure" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
