--- a/app/src/main/res/layout-land/city_changer.xml
+++ b/app/src/main/res/layout-land/city_changer.xml
@@ -133,7 +133,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline11" />
 
     <CheckBox
-        android:id="@+id/windSpeed"
+        android:id="@+id/wind"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -154,7 +154,7 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/windSpeed" />
+        app:layout_constraintTop_toBottomOf="@+id/wind" />
 
     <CheckBox
         android:id="@+id/precipProb"
@@ -169,7 +169,7 @@
         app:layout_constraintTop_toBottomOf="@+id/extraOpt" />
 
     <CheckBox
-        android:id="@+id/allergicLevel"
+        android:id="@+id/uvLevel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
