--- a/app/src/main/res/layout/city_changer.xml
+++ b/app/src/main/res/layout/city_changer.xml
@@ -132,7 +132,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline11" />
 
     <CheckBox
-        android:id="@+id/windSpeed"
+        android:id="@+id/wind"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -149,7 +149,7 @@
         android:text="@string/show_sunrise_and_sunset_time"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/windSpeed" />
+        app:layout_constraintTop_toBottomOf="@+id/wind" />
 
     <CheckBox
         android:id="@+id/precipProb"
@@ -162,7 +162,7 @@
         app:layout_constraintTop_toBottomOf="@+id/sunTime" />
 
     <CheckBox
-        android:id="@+id/allergicLevel"
+        android:id="@+id/uvLevel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
